--- a/ANN-Regression.ipynb
+++ b/ANN-Regression.ipynb
@@ -2,7 +2,7 @@
  "cells": [
   {
    "cell_type": "code",
-   "execution_count": 42,
+   "execution_count": 10,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -15,7 +15,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 11,
    "metadata": {},
    "outputs": [
     {
@@ -168,7 +168,7 @@
        "4         79084.10       0  "
       ]
      },
-     "execution_count": 43,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -187,7 +187,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 44,
+   "execution_count": 12,
    "metadata": {},
    "outputs": [
     {
@@ -315,7 +315,7 @@
        "4          1               1         79084.10       0  "
       ]
      },
-     "execution_count": 44,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -328,7 +328,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 13,
    "metadata": {},
    "outputs": [
     {
@@ -468,7 +468,7 @@
        "4               1         79084.10       0     0.0      0.0    1.0  "
       ]
      },
-     "execution_count": 45,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -489,7 +489,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 14,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -503,7 +503,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 15,
    "metadata": {},
    "outputs": [
     {
@@ -637,7 +637,7 @@
        "506                0       0     0.0      1.0    0.0  "
       ]
      },
-     "execution_count": 47,
+     "execution_count": 15,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -653,7 +653,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 7,
    "metadata": {},
    "outputs": [
     {
@@ -685,7 +685,7 @@
        "      <th>NumOfProducts</th>\n",
        "      <th>HasCrCard</th>\n",
        "      <th>IsActiveMember</th>\n",
-       "      <th>Exited</th>\n",
+       "      <th>EstimatedSalary</th>\n",
        "      <th>France</th>\n",
        "      <th>Germany</th>\n",
        "      <th>Spain</th>\n",
@@ -702,7 +702,7 @@
        "      <td>0.809267</td>\n",
        "      <td>-1.540615</td>\n",
        "      <td>-1.029875</td>\n",
-       "      <td>-0.508468</td>\n",
+       "      <td>1.405186</td>\n",
        "      <td>-1.006018</td>\n",
        "      <td>-0.576470</td>\n",
        "      <td>1.743341</td>\n",
@@ -717,7 +717,7 @@
        "      <td>-0.913102</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>-1.029875</td>\n",
-       "      <td>1.966691</td>\n",
+       "      <td>1.198486</td>\n",
        "      <td>-1.006018</td>\n",
        "      <td>1.734694</td>\n",
        "      <td>-0.573611</td>\n",
@@ -732,7 +732,7 @@
        "      <td>0.809267</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>0.970992</td>\n",
-       "      <td>-0.508468</td>\n",
+       "      <td>-0.303060</td>\n",
        "      <td>-1.006018</td>\n",
        "      <td>-0.576470</td>\n",
        "      <td>1.743341</td>\n",
@@ -747,7 +747,7 @@
        "      <td>0.809267</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>0.970992</td>\n",
-       "      <td>-0.508468</td>\n",
+       "      <td>0.668654</td>\n",
        "      <td>-1.006018</td>\n",
        "      <td>-0.576470</td>\n",
        "      <td>1.743341</td>\n",
@@ -762,7 +762,7 @@
        "      <td>-0.913102</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>-1.029875</td>\n",
-       "      <td>-0.508468</td>\n",
+       "      <td>-1.370135</td>\n",
        "      <td>-1.006018</td>\n",
        "      <td>1.734694</td>\n",
        "      <td>-0.573611</td>\n",
@@ -792,7 +792,7 @@
        "      <td>0.809267</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>-1.029875</td>\n",
-       "      <td>-0.508468</td>\n",
+       "      <td>0.261615</td>\n",
        "      <td>0.994018</td>\n",
        "      <td>-0.576470</td>\n",
        "      <td>-0.573611</td>\n",
@@ -807,7 +807,7 @@
        "      <td>0.809267</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>0.970992</td>\n",
-       "      <td>-0.508468</td>\n",
+       "      <td>-1.678044</td>\n",
        "      <td>-1.006018</td>\n",
        "      <td>1.734694</td>\n",
        "      <td>-0.573611</td>\n",
@@ -822,7 +822,7 @@
        "      <td>-0.913102</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>0.970992</td>\n",
-       "      <td>-0.508468</td>\n",
+       "      <td>-1.681125</td>\n",
        "      <td>0.994018</td>\n",
        "      <td>-0.576470</td>\n",
        "      <td>-0.573611</td>\n",
@@ -837,7 +837,7 @@
        "      <td>-0.913102</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>0.970992</td>\n",
-       "      <td>1.966691</td>\n",
+       "      <td>-1.436536</td>\n",
        "      <td>-1.006018</td>\n",
        "      <td>1.734694</td>\n",
        "      <td>-0.573611</td>\n",
@@ -852,7 +852,7 @@
        "      <td>0.809267</td>\n",
        "      <td>0.649092</td>\n",
        "      <td>0.970992</td>\n",
-       "      <td>-0.508468</td>\n",
+       "      <td>-0.574747</td>\n",
        "      <td>0.994018</td>\n",
        "      <td>-0.576470</td>\n",
        "      <td>-0.573611</td>\n",
@@ -876,23 +876,23 @@
        "6998    -2.615648 -1.106819 -0.453093 -0.002572  0.481756      -0.913102   \n",
        "6999     1.412497  0.903490 -0.164665  0.689902  1.440128       0.809267   \n",
        "\n",
-       "      HasCrCard  IsActiveMember    Exited    France   Germany     Spain  \n",
-       "0     -1.540615       -1.029875 -0.508468 -1.006018 -0.576470  1.743341  \n",
-       "1      0.649092       -1.029875  1.966691 -1.006018  1.734694 -0.573611  \n",
-       "2      0.649092        0.970992 -0.508468 -1.006018 -0.576470  1.743341  \n",
-       "3      0.649092        0.970992 -0.508468 -1.006018 -0.576470  1.743341  \n",
-       "4      0.649092       -1.029875 -0.508468 -1.006018  1.734694 -0.573611  \n",
-       "...         ...             ...       ...       ...       ...       ...  \n",
-       "6995   0.649092       -1.029875 -0.508468  0.994018 -0.576470 -0.573611  \n",
-       "6996   0.649092        0.970992 -0.508468 -1.006018  1.734694 -0.573611  \n",
-       "6997   0.649092        0.970992 -0.508468  0.994018 -0.576470 -0.573611  \n",
-       "6998   0.649092        0.970992  1.966691 -1.006018  1.734694 -0.573611  \n",
-       "6999   0.649092        0.970992 -0.508468  0.994018 -0.576470 -0.573611  \n",
+       "      HasCrCard  IsActiveMember  EstimatedSalary    France   Germany     Spain  \n",
+       "0     -1.540615       -1.029875         1.405186 -1.006018 -0.576470  1.743341  \n",
+       "1      0.649092       -1.029875         1.198486 -1.006018  1.734694 -0.573611  \n",
+       "2      0.649092        0.970992        -0.303060 -1.006018 -0.576470  1.743341  \n",
+       "3      0.649092        0.970992         0.668654 -1.006018 -0.576470  1.743341  \n",
+       "4      0.649092       -1.029875        -1.370135 -1.006018  1.734694 -0.573611  \n",
+       "...         ...             ...              ...       ...       ...       ...  \n",
+       "6995   0.649092       -1.029875         0.261615  0.994018 -0.576470 -0.573611  \n",
+       "6996   0.649092        0.970992        -1.678044 -1.006018  1.734694 -0.573611  \n",
+       "6997   0.649092        0.970992        -1.681125  0.994018 -0.576470 -0.573611  \n",
+       "6998   0.649092        0.970992        -1.436536 -1.006018  1.734694 -0.573611  \n",
+       "6999   0.649092        0.970992        -0.574747  0.994018 -0.576470 -0.573611  \n",
        "\n",
        "[7000 rows x 12 columns]"
       ]
      },
-     "execution_count": 48,
+     "execution_count": 7,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -910,7 +910,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 8,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -928,7 +928,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 9,
    "metadata": {},
    "outputs": [],
    "source": [
@@ -963,10 +963,7 @@
     }
    ],
    "source": [
-    "from tensorflow.keras.layers import BatchNormalization, Dropout\n",
-    "\n",
     "# Model Building :\n",
-    "\n",
     "model=Sequential([\n",
     "    Dense(512,\n",
     "          activation='relu',\n",
